--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,5 +12,5 @@
 
     <nav>
         <div class="logoPic"><img class="logo" src="/images/logo.jpg" alt="logo"></div>
-        <p class="brand">TARGET</p>
+        <a href="/" class="brand">TARGET</a>
     </nav>
