--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -97,7 +97,7 @@ nav{
     font-size: 100%;
     text-align: center;
     border-color: solid black;
-    border-radius: 100%;
+    border-radius: 20px;
 }
 
 .btn{
@@ -115,6 +115,12 @@ nav{
 .btn:hover{
     background-color: black;
     color: blueviolet;
+}
+
+.note{
+    color: blueviolet;
+    margin-top: 2%;
+    margin-left: 10%;
 }
 
 footer{
