--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,6 +21,7 @@
                 <input class="new" type="text" name="newItem" placeholder="Enter new item here: ">
                 <button class="btn" type="submit">+</button>
             </form>
+            <p class="note">Click on checkbox to delete item</p>
         </div>
     </div>
 
